[Update] Customize animation

--- a/index.html
+++ b/index.html
@@ -240,6 +240,11 @@
 				text-align: center;
 				padding: 20px;
 			}
+
+			/* Intro canvas background */
+			#intro-canvas {
+				background: linear-gradient(to bottom, #0a001f, #1a0033);
+			}
 		</style>
 		<meta name="msapplication-TileColor" content="#000000" />
 		<meta name="msapplication-TileImage" content="./images/favicon.png" />
@@ -247,6 +252,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
