--- a/index.html
+++ b/index.html
@@ -257,6 +257,10 @@
 	</head>
 	<body>
 		<!-- partial:index.partial.html -->
+		<!-- Background Music -->
+		<audio id="background-music" preload="auto">
+			<source src="./audio/audio_main.mp3" type="audio/mpeg">
+		</audio>
 		<!-- SVG Spritesheet -->
 		<div style="height: 0; width: 0; position: absolute; visibility: hidden">
 			<svg xmlns="http://www.w3.org/2000/svg">
