--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 				left: 0;
 				right: 0;
 				bottom: 0;
-				background: rgba(0, 0, 0, 0.98);
+				background: linear-gradient(to bottom, #0a001f, #1a0033);
 				display: flex;
 				flex-direction: column;
 				align-items: center;
@@ -409,7 +409,7 @@
 				<p>Em xoay ngang điện thoại để có trải nghiệm tốt nhất nhé 🌟</p>
 			</div>
 		</div>
-		<img id="intro-bear" src="https://i.pinimg.com/originals/e5/c5/4c/e5c54cd43fd75a7ec5b7cf0f65838ec3.gif" alt="Bear" style="position: fixed; left: 10px; bottom: 50px; width: 110px; z-index: 10000;"/>
+		<img id="intro-bear" src="https://i.pinimg.com/originals/e5/c5/4c/e5c54cd43fd75a7ec5b7cf0f65838ec3.gif" alt="Bear" style="position: fixed; left: 10px; bottom: 50px; width: 110px; z-index: 10000; display: none;"/>
 		
 		<!-- App -->
 		<div class="container">
